# Telegram_Finance_Tracker_Bot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker_compose.yaml  main.cpp
include/: pch.h
include/bot/: FinanceTrackerBot.h
include/bot/callback_command/: CallbackAddTransaction.h  CallbackAvailableСategories.h  CallbackBack.h  CallbackCategoryManagement.h  CallbackCommand.h  CallbackGetListTransaction.h  CallbackHelp.h  CallbackListTransactionForMonth.h  CallbackListTransactionForMonthBySum.h  CallbackListTransactionForWeekBySum.h  CallbackListTransactionsForWeek.h  CallbackRemoveTransaction.h  CallbackReportTransaction.h  CallbackSelectedCategories.h  CallbackUpdateTransaction.h
include/bot/command/: BackCommand.h  CategoryCommand.h  Command.h  HelpCommand.h  InfoCommand.h  StartCommand.h
include/bot/entity/: TransactionsEntity.h  UsersEntity.h
include/bot/message_command/: InfoMessageCommand.h  MessageCommand.h  StartMessageCommand.h
include/bot/text_message/: EnteringAmountHandler.h  EnteringRemoveHandler.h  EnteringUpdateHandler.h  TextMessage.h
include/bot/ui_manager/: UIManager.h
include/finance_manager/: FinanceManager.h
include/migration/: MigrationSQL.h
include/service/: TransactionService.h  UserService.h
include/transactions/: Transaction.h
include/user/: User.h  UserManager.h
migration_files/: V1__create_users_and_transactions_table.sql
sqlpp11/include/sqlpp11/: functions.h
src/bot/: FinanceTrackerBot.cpp
src/bot/callback_command/: CallbackAddTransaction.cpp  CallbackAvailableCategories.cpp  CallbackBack.cpp  CallbackCategoryManagement.cpp  CallbackGetListTransaction.cpp  CallbackHelp.cpp  CallbackListTransactionForMonth.cpp  CallbackListTransactionForMonthBySum.cpp  CallbackListTransactionForWeekBySum.cpp  CallbackListTransactionsForWeek.cpp  CallbackRemoveTransaction.cpp  CallbackReportTransaction.cpp  CallbackSelectedCategories.cpp  CallbackUpdateTransaction.cpp
src/bot/command/: BackCommand.cpp  CategoryCommand.cpp  HelpCommand.cpp  InfoCommand.cpp  StartCommand.cpp
src/bot/message_command/: HelpCommand.cpp  InfoMessageCommand.cpp  StartMessageCommand.cpp
src/bot/text_message/: EnteringAmountHandler.cpp  EnteringRemoveHandler.cpp  EnteringUpdateHandler.cpp
src/bot/ui_manager/: UIManager.cpp
src/finance_manager/: FinanceManager.cpp
src/migration/: MigrationSQL.cpp
src/service/: TransactionService.cpp  UserService.cpp
src/transactions/: Transaction.cpp
src/user/: User.cpp  UserManager.cpp
